# gc-bucket-em-morphology-tokyo

./: .pre-commit-config.yaml  README.md  project.cue  pyproject.toml
.github/workflows/: test.yml
terraform/operations/: .terraform.lock.hcl  README.md  accounts.tf  backend.tf  terraform.tfvars  versions.tf
terraform/state-management/: .terraform.lock.hcl  README.md  terraform.tfvars  variables.tf  versions.tf
utilities/data-provider/: README.md  gsutil_sync.bat
utilities/data-receiver/: README.md
